--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ IMAGE PANELS ON HOME PAGE
 */
 
 .panels-container {
-    width: 800px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
