--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ MAIN CONTENT AREA ON ALL PAGES
 */
 
 .main-content {
-    width: 800px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
