--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ IMAGE PANELS ON HOME PAGE
 
 .panels-container {
     width: 100%;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -85,6 +86,7 @@ MAIN CONTENT AREA ON ALL PAGES
 
 .main-content {
     width: 100%;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
