--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ MAIN HEADER ON EVERY PAGE
 
 .main-header {
     background-color: green;
-    height: 300px;
+    height: 60vh;
     margin-bottom: 30px;
 }
 
