--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,12 @@ MAIN NAVIGATION ON EVERY PAGE
 }
 
 .main-nav a:hover {
-    background: #446;
+    background: rgb(76, 77, 73);
 }
 
 .main-nav .nav-title {
     flex: 1;
+    color: rgb(136, 85, 9);
   }
 
 /* 
@@ -40,9 +41,19 @@ MAIN HEADER ON EVERY PAGE
 */
 
 .main-header {
-    background-color: green;
+    background-color: rgb(173, 109, 12);
+    background-image: url(images/gallery-05.jpg);
+    background-size: cover;
     height: 60vh;
     margin-bottom: 30px;
+}
+
+@media (min-width: 800px) {
+
+    .main-header {
+        background-color: rgb(255, 218, 11);
+        background-image: url(images/gallery-12.jpg);
+    }
 }
 
 .main-title {
@@ -61,6 +72,7 @@ IMAGE PANELS ON HOME PAGE
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
 }
 
 .panel {
@@ -70,10 +82,12 @@ IMAGE PANELS ON HOME PAGE
     overflow: hidden;
     box-shadow: 1px 3px 3px rgba(0,0,0,0.2);
     margin: 5px;
+    flex: 1;
 }
 
 .panel img {
-    width: 200px;
+    width: 100%;
+
 }
 
 .panel span {
