--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,18 @@ MAIN NAVIGATION ON EVERY PAGE
 */
 
 .main-nav {
-    background-color: #222;
+    background-color: rgb(0, 0, 0);
     display: flex;
 }
 
+@media (max-width: 800px) {
+    .main-nav {
+        flex-direction: column;
+    }
+}
+
 .main-nav a {
-    color: white;
+    color: rgb(150, 149, 149);
     padding: 10px 20px;
     text-decoration: none;
     width: 150px;
